# cuda_optimization_learning

./: CMakeLists.txt  README.md  run_ncu.sh
1_cuda_reduce/: CMakeLists.txt  reduce_add_during_load.cu  reduce_completely_unroll.cu  reduce_multi_add.cu  reduce_no_bank_conflict.cu  reduce_no_divergence_branch.cu  reduce_shuffle.cu  reduce_unroll_last_warp.cu  reduce_v0.cu  reduce_with_shared_mem.cu  simple_add.cu
2_cuda_sgemm/: CMakeLists.txt  sgemm.cu  sgemm_increase_workload_per_thread.cu  sgemm_sliding_window.cu  sgemm_smem.cu  sgemm_v0.cu  test_capture_host_function.cu  test_host_device_bandwith.cu
metrics/: CMakeLists.txt
nsight/: ncu_simple_add.cu
utils/: cuda_context.cuh
